🐛 Fix double-scrollbar in code injection editor (#838)
closes TryGhost/Ghost#8896
- remove `margin-right: 30px` and forced `overflow: scroll` styles for CodeMirror's "Scroll" element in the code injection editors

--- a/ghost/admin/app/styles/layouts/settings.css
+++ b/ghost/admin/app/styles/layouts/settings.css
@@ -276,6 +276,11 @@
     border-radius: inherit;
 }
 
+.settings-code-editor .CodeMirror-scroll {
+   overflow: hidden !important;
+   margin-right: 0;
+}
+
 .settings-code-editor .cm-s-xq-light span.cm-meta {
     color: #000;
 }
